# MetaPhlAnTaxaProcessor

./: README.md  pyproject.toml
src/metaphlantaxaprocessor/: main.py  process_rank.py  utils.py
tests/: test_metaphlan.py
tests/test_data/: .gitignore  mock_data.tsv  mock_data_ext.tsv  pandas_method.py  testing.ipynb  testing.md
tests/test_data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
