[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaphlantaxaprocessor"
dynamic = ["version"]
description = "MetaPhlAnTaxaProcessor is a Python-based utility designed to streamline the downstream analysis of MetaPhlAn output. It processes MetaPhlAn's taxonomic profiling data, converting it into structured CSV files for each taxonomic rank (e.g., Kingdom, Phyla, Class, etc.)."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "vidyasagar0405", email = "vidyasagar0405@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pandas",
    "openpyxl",
    "argparse",
]

[project.urls]
Documentation = "https://github.com/vidyasagar0405/metaphlantaxaprocessor#readme"
Issues = "https://github.com/vidyasagar0405/metaphlantaxaprocessor/issues"
Source = "https://github.com/vidyasagar0405/metaphlantaxaprocessor"

[tool.hatch.version]
path = "src/metaphlantaxaprocessor/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/metaphlantaxaprocessor tests}"

[tool.coverage.run]
source_pkgs = ["metaphlantaxaprocessor", "tests"]
branch = true
parallel = true
omit = [
  "src/metaphlantaxaprocessor/__about__.py",
]

[tool.coverage.paths]
metaphlantaxaprocessor = ["src/metaphlantaxaprocessor", "*/metaphlantaxaprocessor/src/metaphlantaxaprocessor"]
tests = ["tests", "*/metaphlantaxaprocessor/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[project.scripts]
metaphlan-taxaprocessor = "metaphlantaxaprocessor.main:main"
